k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehouse-microservice
  namespace: statex-apps
  labels:
    app: warehouse-microservice
    managed-by: k8s-migration
spec:
  type: ClusterIP
  selector:
    app: warehouse-microservice
  ports:
    - protocol: TCP
      port: 3201
      targetPort: 3201
      name: http
