k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warehouse-microservice
  namespace: statex-apps
  labels:
    app: warehouse-microservice
    managed-by: k8s-migration
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - warehouse.alfares.cz
      secretName: warehouse-microservice-tls
  rules:
    - host: warehouse.alfares.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: warehouse-microservice
                port:
                  number: 3201
